css and js update

--- a/assets/onpaste/onpaste.css
+++ b/assets/onpaste/onpaste.css
@@ -3,6 +3,7 @@
  * Version Date: 08/12/2023
  * Developed by: Rogério Saraceni
  * Licensed MIT
+ * https://github.com/rogeriosaraceni/onpaste-js
  */
  
 .wrapper-file{
